--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div class="app">
-  Start coding!!!
-</div>
+<router-outlet></router-outlet>
